[tool.poetry]
name = "repl_python3_School-project-repository"
version = "0.1.0"
description = ""
authors = ["SungminIm <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"
pg = "^0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
